# PySchott

./: README.md  setup.cfg  setup.py
PySchott/: PySchott.py  Pyqt_App.py  Pyqt_Widget.py  __init__.py
example/: Example.ipynb  example.py
